Fix Robolectric